--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+* {
+	background-color: #000;
+}
