--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -5,6 +5,15 @@
 
 :root{
 	--goldish: #DABB42;
+	--grey: #343A40;
+}
+
+.grey-underline{
+	border-bottom: 1px solid var(--grey);
+}
+
+body{
+	min-height: 100vh;
 }
 
 * {
@@ -12,6 +21,7 @@
 	font-family: "Inika", serif;
 	font-weight: 400;
 	font-style: normal;
+	color: white;
 }
   
 .inika-bold {
@@ -28,4 +38,29 @@ font-style: normal;
 
 .goldish{
 	color: var(--goldish)
+}
+
+nav{
+	align-items: center;
+	justify-content: space-between;
+}
+
+.nav-links h3{
+	padding: 15px;
+	text-decoration: underline;
+	opacity: 0.7;
+	cursor: pointer;
+}
+
+.white-button{
+	background: #fff;
+	color: #000;
+	padding: 10px;
+	border-radius: 15px;
+	width: 80px;
+	transition: 0.4s ease;
+}
+
+.white-button:hover{
+	opacity: 0.8;
 }
