feat(web): adding title screen, need improvement

--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -64,3 +64,14 @@ nav{
 .white-button:hover{
 	opacity: 0.8;
 }
+
+.meet{
+	font-size: 8rem;
+	text-transform: uppercase;
+	letter-spacing: 0.5;
+}
+
+.sveltick{
+	color: var(--goldish);
+	font-size: 7rem;
+}
